--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,11 +13,14 @@
     "clsx": "^2.1.1",
     "firebase": "^12.9.0",
     "framer-motion": "^12.4.0",
+    "glob": "^11.0.0",
+    "ignore": "^7.0.0",
     "lucide-react": "^0.474.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-diff-viewer-continued": "^4.0.5",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "simple-git": "^3.27.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
